忽略文件修改